--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "next build",
 		"dev": "next dev",
 		"postinstall": "npm run generate",
-		"generate": "zenstack generate",
+		"generate": "prisma generate",
 		"lint": "biome check .",
 		"lint:fix": "biome check --write .",
 		"type-check": "tsc --noEmit",
@@ -27,10 +27,10 @@
 		"@conform-to/react": "^1.1.5",
 		"@conform-to/zod": "^1.1.5",
 		"@hookform/resolvers": "^3.9.0",
-		"@jsonforms/core": "^3.3.0",
-		"@jsonforms/react": "^3.3.0",
-		"@jsonforms/vanilla-renderers": "^3.3.0",
-		"@prisma/client": "^5.18.0",
+		"@prisma/client": "^5.19.1",
+		"@trpc/client": "^11.0.0-rc.446",
+		"@trpc/react-query": "^11.0.0-rc.446",
+		"@trpc/server": "^11.0.0-rc.446",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-alert-dialog": "^1.1.1",
 		"@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -63,14 +63,11 @@
 		"@rjsf/utils": "^5.20.1",
 		"@rjsf/validator-ajv8": "^5.20.1",
 		"@t3-oss/env-nextjs": "^0.11.1",
-		"@tanstack/react-query": "^5.53.1",
+		"@tanstack/react-query": "^5.53.3",
 		"@tanstack/react-table": "^8.20.5",
 		"@uidotdev/usehooks": "^2.4.1",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/postgres": "^0.9.0",
-		"@zenstackhq/runtime": "2.4.1",
-		"@zenstackhq/server": "^2.4.1",
-		"@zenstackhq/tanstack-query": "^2.4.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
@@ -79,11 +76,11 @@
 		"geist": "^1.3.1",
 		"input-otp": "^1.2.4",
 		"leaflet": "^1.9.4",
-		"lucide-react": "^0.437.0",
+		"lucide-react": "^0.438.0",
 		"next": "^14.2.7",
 		"next-auth": "^5.0.0-beta.20",
 		"next-themes": "^0.3.0",
-		"nuqs": "^1.18.0",
+		"nuqs": "^1.19.0",
 		"openapi-fetch": "^0.12.0",
 		"react": "18.3.1",
 		"react-day-picker": "^9.0.8",
@@ -111,28 +108,20 @@
 		"@types/decompress": "^4.2.7",
 		"@types/inquirer": "^9.0.7",
 		"@types/leaflet": "^1.9.12",
-		"@types/node": "^22.5.1",
+		"@types/node": "^22.5.2",
 		"@types/react": "^18.3.5",
 		"@types/react-dom": "^18.3.0",
-		"@zenstackhq/openapi": "^2.4.1",
 		"autoprefixer": "^10.4.20",
 		"decompress": "^4.2.1",
 		"dotenv-cli": "^7.4.2",
-		"inquirer": "^10.1.8",
+		"inquirer": "^10.2.0",
 		"openapi-typescript": "^7.3.3",
 		"pixel-borders": "^1.1.4",
-		"postcss": "^8.4.42",
-		"prisma": "^5.18.0",
+		"postcss": "^8.4.44",
+		"prisma": "^5.19.1",
 		"prisma-json-schema-generator": "^5.1.5",
 		"tailwindcss": "^3.4.10",
 		"tsconfig-paths": "^4.2.0",
-		"typescript": "^5.5.4",
-		"zenstack": "2.4.1"
-	},
-	"zenstack": {
-		"schema": "./database/schema.zmodel"
-	},
-	"prisma": {
-		"schema": "./database/generated.prisma"
+		"typescript": "^5.5.4"
 	}
 }
