--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
 		"db:backup": "bun ./bin/backup-db.ts",
 		"assets:sync": "bun ./bin/trello-assets.ts",
 		"add:component": "npx shadcn-ui@latest add",
-		"gen:fo:api": "openapi-ts",
-		"gen:api": "openapi-typescript ./database/open-api.json -o ./src/utils/rest/schema.d.ts"
+		"gen:api": "openapi-typescript ./src/utils/fo-api/swagger-modified.json -o ./src/utils/fo-api/types.generated.ts"
 	},
 	"dependencies": {
 		"@auth/core": "^0.34.2",
@@ -26,6 +25,7 @@
 		"@conform-to/dom": "^1.1.5",
 		"@conform-to/react": "^1.1.5",
 		"@conform-to/zod": "^1.1.5",
+		"@hey-api/client-fetch": "^0.2.4",
 		"@hookform/resolvers": "^3.9.0",
 		"@prisma/client": "^5.19.1",
 		"@radix-ui/react-accordion": "^1.2.0",
@@ -60,44 +60,44 @@
 		"@rjsf/utils": "^5.20.1",
 		"@rjsf/validator-ajv8": "^5.20.1",
 		"@t3-oss/env-nextjs": "^0.11.1",
-		"@tanstack/react-query": "^5.53.3",
+		"@tanstack/react-query": "^5.55.4",
 		"@tanstack/react-table": "^8.20.5",
 		"@trpc/client": "^11.0.0-rc.446",
 		"@trpc/react-query": "^11.0.0-rc.446",
 		"@trpc/server": "^11.0.0-rc.446",
 		"@uidotdev/usehooks": "^2.4.1",
 		"@vercel/analytics": "^1.3.1",
-		"@vercel/postgres": "^0.9.0",
+		"@vercel/postgres": "^0.10.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
 		"date-fns": "^3.6.0",
-		"embla-carousel-react": "^8.2.0",
+		"embla-carousel-react": "^8.2.1",
 		"geist": "^1.3.1",
 		"input-otp": "^1.2.4",
 		"leaflet": "^1.9.4",
-		"lucide-react": "^0.438.0",
-		"next": "^14.2.7",
+		"lucide-react": "^0.439.0",
+		"next": "^14.2.9",
 		"next-auth": "^5.0.0-beta.20",
 		"next-themes": "^0.3.0",
-		"nuqs": "^1.19.0",
+		"nuqs": "^1.19.1",
 		"openapi-fetch": "^0.12.0",
 		"react": "18.3.1",
-		"react-day-picker": "^9.0.8",
+		"react-day-picker": "^9.0.9",
 		"react-dom": "18.3.1",
 		"react-hook-form": "^7.53.0",
 		"react-icons": "^5.3.0",
 		"react-leaflet": "^4.2.1",
 		"react-resizable-panels": "^2.1.2",
 		"recharts": "^2.12.7",
-		"sass": "^1.77.8",
+		"sass": "^1.78.0",
 		"sonner": "^1.5.0",
 		"superjson": "^2.2.1",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
 		"use-debounce": "^10.0.3",
 		"usehooks-ts": "^3.1.0",
-		"vaul": "^0.9.1",
+		"vaul": "^0.9.2",
 		"zod": "^3.23.8",
 		"zsa": "^0.6.0",
 		"zsa-react": "^0.2.2",
@@ -105,24 +105,23 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
-		"@hey-api/openapi-ts": "^0.52.11",
 		"@types/decompress": "^4.2.7",
 		"@types/inquirer": "^9.0.7",
 		"@types/leaflet": "^1.9.12",
-		"@types/node": "^22.5.2",
+		"@types/node": "^22.5.4",
 		"@types/react": "^18.3.5",
 		"@types/react-dom": "^18.3.0",
 		"autoprefixer": "^10.4.20",
 		"decompress": "^4.2.1",
 		"dotenv-cli": "^7.4.2",
-		"inquirer": "^10.2.0",
-		"openapi-typescript": "^7.3.3",
+		"inquirer": "^10.2.2",
+		"openapi-typescript": "^7.4.0",
 		"pixel-borders": "^1.1.4",
-		"postcss": "^8.4.44",
+		"postcss": "^8.4.45",
 		"prisma": "^5.19.1",
 		"prisma-json-schema-generator": "^5.1.5",
 		"tailwindcss": "^3.4.10",
 		"tsconfig-paths": "^4.2.0",
-		"typescript": "^5.5.4"
+		"typescript": "^5.6.2"
 	}
 }
