--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
 		"gen:api": "openapi-typescript ./src/utils/fo-api/swagger-modified.json -o ./src/utils/fo-api/types.generated.ts"
 	},
 	"dependencies": {
-		"@auth/core": "^0.34.2",
-		"@auth/prisma-adapter": "^2.4.2",
-		"@conform-to/dom": "^1.1.5",
-		"@conform-to/react": "^1.1.5",
-		"@conform-to/zod": "^1.1.5",
-		"@hey-api/client-fetch": "^0.2.4",
+		"@auth/core": "^0.35.2",
+		"@auth/prisma-adapter": "^2.5.2",
+		"@conform-to/dom": "^1.2.2",
+		"@conform-to/react": "^1.2.2",
+		"@conform-to/zod": "^1.2.2",
+		"@hey-api/client-fetch": "^0.3.3",
 		"@hookform/resolvers": "^3.9.0",
-		"@prisma/client": "^5.19.1",
+		"@prisma/client": "^5.20.0",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-alert-dialog": "^1.1.1",
 		"@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -56,74 +56,71 @@
 		"@radix-ui/react-toggle": "^1.1.0",
 		"@radix-ui/react-toggle-group": "^1.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
-		"@rjsf/core": "^5.20.1",
-		"@rjsf/utils": "^5.20.1",
-		"@rjsf/validator-ajv8": "^5.20.1",
+		"@rjsf/core": "^5.21.1",
+		"@rjsf/utils": "^5.21.1",
+		"@rjsf/validator-ajv8": "^5.21.1",
 		"@t3-oss/env-nextjs": "^0.11.1",
-		"@tanstack/react-query": "^5.55.4",
+		"@tanstack/react-query": "^5.56.2",
 		"@tanstack/react-table": "^8.20.5",
 		"@trpc/client": "^11.0.0-rc.446",
 		"@trpc/react-query": "^11.0.0-rc.446",
 		"@trpc/server": "^11.0.0-rc.446",
 		"@uidotdev/usehooks": "^2.4.1",
-		"@uploadthing/react": "^7.0.1",
+		"@uploadthing/react": "^7.0.2",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/postgres": "^0.10.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
-		"date-fns": "^3.6.0",
-		"embla-carousel-react": "^8.2.1",
+		"date-fns": "^4.1.0",
+		"embla-carousel-react": "^8.3.0",
 		"geist": "^1.3.1",
 		"input-otp": "^1.2.4",
 		"jimp": "^1.6.0",
 		"leaflet": "^1.9.4",
-		"lucide-react": "^0.439.0",
-		"next": "^14.2.9",
+		"lucide-react": "^0.446.0",
+		"next": "^14.2.13",
 		"next-auth": "^5.0.0-beta.20",
 		"next-themes": "^0.3.0",
-		"nuqs": "^1.19.1",
-		"openapi-fetch": "^0.12.0",
+		"nuqs": "^1.19.2",
+		"openapi-fetch": "^0.12.2",
 		"react": "18.3.1",
-		"react-day-picker": "^9.0.9",
+		"react-day-picker": "^9.1.2",
 		"react-dom": "18.3.1",
 		"react-hook-form": "^7.53.0",
 		"react-icons": "^5.3.0",
 		"react-leaflet": "^4.2.1",
-		"react-resizable-panels": "^2.1.2",
+		"react-resizable-panels": "^2.1.3",
 		"recharts": "^2.12.7",
-		"sass": "^1.78.0",
+		"sass": "^1.79.3",
 		"sonner": "^1.5.0",
 		"superjson": "^2.2.1",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7",
-		"uploadthing": "^7.0.1",
+		"uploadthing": "^7.0.2",
 		"use-debounce": "^10.0.3",
 		"usehooks-ts": "^3.1.0",
-		"vaul": "^0.9.2",
-		"zod": "^3.23.8",
-		"zsa": "^0.6.0",
-		"zsa-react": "^0.2.2",
-		"zsa-react-query": "^0.2.1"
+		"vaul": "^0.9.7",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.8.3",
+		"@biomejs/biome": "1.9.2",
 		"@types/decompress": "^4.2.7",
 		"@types/inquirer": "^9.0.7",
 		"@types/leaflet": "^1.9.12",
-		"@types/node": "^22.5.4",
-		"@types/react": "^18.3.5",
+		"@types/node": "^22.7.2",
+		"@types/react": "^18.3.9",
 		"@types/react-dom": "^18.3.0",
 		"autoprefixer": "^10.4.20",
 		"decompress": "^4.2.1",
 		"dotenv-cli": "^7.4.2",
-		"inquirer": "^10.2.2",
-		"openapi-typescript": "^7.4.0",
+		"inquirer": "^11.0.2",
+		"openapi-typescript": "^7.4.1",
 		"pixel-borders": "^1.1.4",
-		"postcss": "^8.4.45",
-		"prisma": "^5.19.1",
+		"postcss": "^8.4.47",
+		"prisma": "^5.20.0",
 		"prisma-json-schema-generator": "^5.1.5",
-		"tailwindcss": "^3.4.10",
+		"tailwindcss": "^3.4.13",
 		"tsconfig-paths": "^4.2.0",
 		"typescript": "^5.6.2"
 	}
